<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_view_database_data"
        android:orderInCategory="98"
        android:title="@string/menu_show_database_data" />
    <item
        android:id="@+id/menu_autogait_calibration"
        android:orderInCategory="99"
        android:title="@string/menu_autogait_calibration" />
    <item
        android:id="@+id/menu_clear_agdb"
        android:orderInCategory="100"
        android:title="@string/menu_clear_db" />
	<item
        android:id="@+id/menu_archive_logs"
        android:orderInCategory="101"
        android:title="@string/menu_archive_logs" />
	<item
        android:id="@+id/menu_import_database"
        android:orderInCategory="102"
        android:title="@string/menu_import_database" />
	<item
        android:id="@+id/menu_export_database"
        android:orderInCategory="103"
        android:title="@string/menu_export_database" />
</menu>